multisection betae queries and ogbbiokg typed model

--- a/notebooks/BetaE_Reasoning_Test.ipynb
+++ b/notebooks/BetaE_Reasoning_Test.ipynb
@@ -13,9 +13,11 @@
     "import time\n",
     "import pickle\n",
     "from tqdm import tqdm\n",
-    "os.chdir('/home/gebhart/projects/sheaf_kg')\n",
+    "# for some reason, need to go to the sheaf_kg directory in order for torch.load to work\n",
+    "os.chdir('/home/gebhart/projects/sheaf_kg/sheaf_kg')\n",
     "\n",
     "import sheaf_kg.harmonic_extension as harmonic_extension\n",
+    "from sheaf_kg.sheafE_models import SheafE_Multisection, SheafE_Diag\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -27,18 +29,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = 'FB15k-237'\n",
-    "num_test = 200\n",
-    "model_name = 'StructuredEmbedding_1000epochs_128dim_SoftplusLossloss_1234seed_20210127-1707'\n",
+    "num_test = 500\n",
+    "model_name = 'StructuredEmbedding_1000epochs_128embdim_SoftplusLossloss_1234seed_20210127-1707'\n",
     "save_loc = '/home/gebhart/projects/sheaf_kg/data/{}/{}/trained_model.pkl'.format(dataset,model_name)\n",
-    "# q2b_path = '/home/gebhart/projects/sheaf_kg/data/{}-q2b'.format(dataset)\n",
-    "q2b_path = '/home/gebhart/projects/sheaf_kg/data/{}-betae'.format(dataset)\n",
+    "betae_path = '/home/gebhart/projects/sheaf_kg/data/{}-betae'.format(dataset)\n",
     "model = torch.load(save_loc).to('cpu')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -99,16 +121,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(q2b_path,'train-queries.pkl'), 'rb') as f:\n",
+    "with open(os.path.join(betae_path,'train-queries.pkl'), 'rb') as f:\n",
     "    test_queries = pickle.load(f)\n",
     "\n",
-    "with open(os.path.join(q2b_path,'train-answers.pkl'), 'rb') as f:\n",
+    "with open(os.path.join(betae_path,'train-answers.pkl'), 'rb') as f:\n",
     "    test_answers = pickle.load(f)\n",
     "    \n",
-    "with open(os.path.join(q2b_path,'id2rel.pkl'), 'rb') as f:\n",
+    "with open(os.path.join(betae_path,'id2rel.pkl'), 'rb') as f:\n",
     "    id2rel = pickle.load(f)\n",
     "    \n",
-    "with open(os.path.join(q2b_path,'id2ent.pkl'), 'rb') as f:\n",
+    "with open(os.path.join(betae_path,'id2ent.pkl'), 'rb') as f:\n",
     "    id2ent = pickle.load(f)"
    ]
   },
@@ -293,86 +315,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 1/200 [00:00<00:26,  7.59it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running query : ('e', ('r', 'r'))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [00:17<00:00, 11.62it/s]\n",
-      "  0%|          | 1/200 [00:00<00:32,  6.21it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running query : ('e', ('r', 'r', 'r'))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [00:30<00:00,  6.46it/s]\n",
-      "  2%|▏         | 3/200 [00:00<00:08, 22.33it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running query : (('e', ('r',)), ('e', ('r',)))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [00:09<00:00, 21.29it/s]\n",
-      "  1%|          | 2/200 [00:00<00:15, 13.06it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running query : (('e', ('r',)), ('e', ('r',)), ('e', ('r',)))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [00:14<00:00, 14.18it/s]\n",
-      "0it [00:00, ?it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running query : (('e', ('r', 'r')), ('e', ('r',)))\n",
-      "Running query : ((('e', ('r',)), ('e', ('r',))), ('r',))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "ModuleAttributeError",
+     "evalue": "'Embedding' object has no attribute 'max_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleAttributeError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-03a7c2db456b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtarget_embeddings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentity_embeddings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedding_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mallhits1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mallhits3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mallhits5\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mallhits10\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/sheaf_kg/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    725\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    726\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 727\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    728\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    729\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/pykeen/src/pykeen/nn/emb.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, indices)\u001b[0m\n\u001b[1;32m    323\u001b[0m     ) -> torch.FloatTensor:  # noqa: D102\n\u001b[1;32m    324\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindices\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 325\u001b[0;31m             \u001b[0mprefix_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    326\u001b[0m             \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_embeddings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    327\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/sheaf_kg/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    777\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    778\u001b[0m         raise ModuleAttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0;32m--> 779\u001b[0;31m             type(self).__name__, name))\n\u001b[0m\u001b[1;32m    780\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    781\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Module'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleAttributeError\u001b[0m: 'Embedding' object has no attribute 'max_id'"
      ]
     }
    ],
@@ -429,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,105 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hits@1</th>\n",
-       "      <th>hits@3</th>\n",
-       "      <th>hits@5</th>\n",
-       "      <th>hits@10</th>\n",
-       "      <th>mrr</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2p</th>\n",
-       "      <td>4.891557</td>\n",
-       "      <td>11.664503</td>\n",
-       "      <td>14.405062</td>\n",
-       "      <td>18.150074</td>\n",
-       "      <td>9.758725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3p</th>\n",
-       "      <td>6.572316</td>\n",
-       "      <td>14.807526</td>\n",
-       "      <td>17.687145</td>\n",
-       "      <td>22.468318</td>\n",
-       "      <td>12.455279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2i</th>\n",
-       "      <td>1.527778</td>\n",
-       "      <td>4.166667</td>\n",
-       "      <td>5.173611</td>\n",
-       "      <td>7.513889</td>\n",
-       "      <td>3.665594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3i</th>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>4.952604</td>\n",
-       "      <td>5.633536</td>\n",
-       "      <td>5.865858</td>\n",
-       "      <td>3.907512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pi</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ip</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      hits@1     hits@3     hits@5    hits@10        mrr\n",
-       "2p  4.891557  11.664503  14.405062  18.150074   9.758725\n",
-       "3p  6.572316  14.807526  17.687145  22.468318  12.455279\n",
-       "2i  1.527778   4.166667   5.173611   7.513889   3.665594\n",
-       "3i  1.500000   4.952604   5.633536   5.865858   3.907512\n",
-       "pi  0.000000   0.000000   0.000000   0.000000   0.000000\n",
-       "ip  0.000000   0.000000   0.000000   0.000000   0.000000"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df * 100"
    ]
