--- a/notebooks/BetaE_Reasoning_Test-TransE.ipynb
+++ b/notebooks/BetaE_Reasoning_Test-TransE.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##NOTE: \n",
+    "For models trained before ~Feb 2021, this requires an older version of Pykeen to be used. \n",
+    "Use version pykeen==1.1.0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import os\n",
@@ -16,15 +26,13 @@
     "# for some reason, need to go to the sheaf_kg directory in order for torch.load to work\n",
     "os.chdir('/home/gebhart/projects/sheaf_kg/sheaf_kg')\n",
     "\n",
-    "import sheaf_kg.harmonic_extension as harmonic_extension\n",
-    "from sheaf_kg.sheafE_models import SheafE_Multisection, SheafE_Diag\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pykeen\n",
     "import torch\n",
-    "from pykeen.pipeline import pipeline"
+    "from pykeen.pipeline import pipeline\n",
+    "from pykeen.models import TransE"
    ]
   },
   {
@@ -42,9 +50,8 @@
    "source": [
     "dataset = 'FB15k-237'\n",
     "num_test = 200\n",
-    "use_section = 0\n",
     "train_test_queries = 'train'\n",
-    "model_name = 'SheafE_Multisection_64embdim_64esdim_64sec_2norm_1000epochs_SoftplusLossloss_20210228-1911'\n",
+    "model_name = 'TransE_1000epochs_128embdim_CrossEntropyLossloss_42seed_20210128-1828'\n",
     "save_loc = '/home/gebhart/projects/sheaf_kg/data/{}/{}/trained_model.pkl'.format(dataset,model_name)\n",
     "betae_path = '/home/gebhart/projects/sheaf_kg/data/{}-betae'.format(dataset)\n",
     "model = torch.load(save_loc).to('cpu')"
@@ -52,25 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_structures = [('e', ('r', 'r')), ('e', ('r', 'r', 'r')), (('e', ('r',)), ('e', ('r',))), (('e', ('r',)), ('e', ('r',)), ('e', ('r',))), (('e', ('r', 'r')), ('e', ('r',))), ((('e', ('r',)), ('e', ('r',))), ('r',))]\n",
+    "query_structures = [('e', ('r', 'r')), ('e', ('r', 'r', 'r')), (('e', ('r',)), ('e', ('r',))), (('e', ('r',)), ('e', ('r',)), ('e', ('r',)))]\n",
     "\n",
     "query_name_dict = {('e',('r',)): '1p', \n",
     "                    ('e', ('r', 'r')): '2p',\n",
@@ -178,29 +171,16 @@
     "    edge_indices = np.concatenate([np.arange(0,n_path_ents)[:,np.newaxis].T, np.arange(1,n_path_ents+1)[:,np.newaxis].T], axis=0)\n",
     "    \n",
     "    rel_idx_tensor = torch.LongTensor(rels)\n",
-    "    left_restrictions = torch.index_select(model.left_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
-    "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
-    "        \n",
-    "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
+    "    relations = model.relation_embeddings(indices=rel_idx_tensor)\n",
+    "    \n",
     "    for invix in range(len(invs)):\n",
     "        if invix == -1:\n",
-    "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
-    "        else:\n",
-    "            restrictions[invix,0,:,:] = left_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = right_restrictions[invix]\n",
+    "            relations[invix] = -relations[invix]\n",
     "    \n",
     "    ent_idx_tensor = torch.LongTensor([ent])\n",
-    "    source_embeddings = torch.index_select(model.ent_embeddings, 0, ent_idx_tensor).view(-1, model.embedding_dim, model.num_sections).detach().numpy()\n",
-    "    \n",
-    "    B = np.array([0,n_path_ents],np.int)\n",
-    "    U = np.array(range(1,n_path_ents),np.int)\n",
-    "    source_vertices = [0]\n",
-    "    target_vertices = [1]\n",
-    "    LSchur = harmonic_extension.Kron_reduction(edge_indices, restrictions, B, U)\n",
-    "    return LSchur, source_vertices, target_vertices, source_embeddings\n",
+    "    source_embeddings = model.entity_embeddings(indices=ent_idx_tensor)\n",
+    "    sm = source_embeddings + torch.sum(relations, dim=0)\n",
+    "    return sm\n",
     "\n",
     "def L_i(query, model):\n",
     "    '''query of form (('e', ('r',)), ('e', ('r',)), ... , ('e', ('r',)))'''\n",
@@ -218,101 +198,19 @@
     "    edge_indices = np.concatenate([np.full(n_ents,n_ents)[:,np.newaxis].T, np.arange(0,n_ents)[:,np.newaxis].T], axis=0)\n",
     "    \n",
     "    rel_idx_tensor = torch.LongTensor(rels)\n",
-    "    left_restrictions = torch.index_select(model.left_embeddings, 0 , rel_idx_tensor).detach().numpy()\n",
-    "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
+    "    relations = model.relation_embeddings(indices=rel_idx_tensor)\n",
     "    \n",
-    "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
     "    for invix in range(len(invs)):\n",
     "        if invix == -1:\n",
-    "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
-    "        else:\n",
-    "            restrictions[invix,0,:,:] = left_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = right_restrictions[invix]\n",
+    "            relations[invix] = -relations[invix]\n",
     "    \n",
     "    ent_idx_tensor = torch.LongTensor(ents)\n",
-    "    source_embeddings = torch.index_select(model.ent_embeddings, 0, ent_idx_tensor).view(-1, model.embedding_dim, model.num_sections).detach().numpy()\n",
+    "    source_embeddings = model.entity_embeddings(indices=ent_idx_tensor)\n",
     "    \n",
-    "    L = harmonic_extension.Laplacian(edge_indices, restrictions)\n",
-    "    source_vertices = np.arange(n_ents)\n",
-    "    target_vertices = [n_ents]\n",
-    "    return L, source_vertices, target_vertices, source_embeddings\n",
+    "    sm = torch.sum(source_embeddings + relations, dim=0)\n",
+    "    return sm\n",
     "\n",
-    "def L_ip(query, model):\n",
-    "    '''query of form ((('e', ('r',)), ('e', ('r',))), ('r',))'''\n",
-    "    ents = [map_ent(t[0]) for t in query[0]]\n",
-    "    rel0, inv0 = map_rel(query[0][0][1][0])\n",
-    "    rel1, inv1 = map_rel(query[0][1][1][0])\n",
-    "    rel2, inv2 = map_rel(query[1][0])\n",
-    "    rels = [rel0, rel1, rel2]\n",
-    "    invs = [inv0, inv1, inv2]\n",
-    "    n_ents = len(ents)\n",
-    "    edge_indices = np.array([[0,2],[1,2],[2,3]],np.int).T\n",
-    "    \n",
-    "    rel_idx_tensor = torch.LongTensor(rels)\n",
-    "    left_restrictions = torch.index_select(model.left_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
-    "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
-    "    \n",
-    "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
-    "    for invix in range(len(invs)):\n",
-    "        if invix == -1:\n",
-    "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
-    "        else:\n",
-    "            restrictions[invix,0,:,:] = left_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = right_restrictions[invix]\n",
-    "    \n",
-    "    ent_idx_tensor = torch.LongTensor(ents)\n",
-    "    source_embeddings = torch.index_select(model.ent_embeddings, 0, ent_idx_tensor).view(-1, model.embedding_dim, model.num_sections).detach().numpy()\n",
-    "    \n",
-    "    B = np.array([0,2,3],np.int)\n",
-    "    U = np.array([1],np.int)\n",
-    "    source_vertices = [0,1]\n",
-    "    target_vertices = [2]\n",
-    "    LSchur = harmonic_extension.Kron_reduction(edge_indices, restrictions, B, U)\n",
-    "    return LSchur, source_vertices, target_vertices, source_embeddings\n",
-    "    \n",
-    "def L_pi(query, model):\n",
-    "    '''query of form (('e', ('r', 'r')), ('e', ('r',)))'''\n",
-    "    ents = [map_ent(t[0]) for t in query]\n",
-    "    rel0, inv0 = map_rel(query[0][1][0])\n",
-    "    rel1, inv1 = map_rel(query[0][1][1])\n",
-    "    rel2, inv2 = map_rel(query[1][1][0])\n",
-    "    rels = [rel0, rel1, rel2]\n",
-    "    invs = [inv0, inv1, inv2]\n",
-    "    n_ents = len(ents)\n",
-    "    edge_indices = np.array([[0,2],[2,3],[1,3]],np.int).T\n",
-    "    \n",
-    "    rel_idx_tensor = torch.LongTensor(rels)\n",
-    "    left_restrictions = torch.index_select(model.left_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
-    "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
-    "    \n",
-    "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
-    "    for invix in range(len(invs)):\n",
-    "        if invix == -1:\n",
-    "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
-    "        else:\n",
-    "            restrictions[invix,0,:,:] = left_restrictions[invix]\n",
-    "            restrictions[invix,1,:,:] = right_restrictions[invix]\n",
-    "    \n",
-    "    ent_idx_tensor = torch.LongTensor(ents)\n",
-    "    source_embeddings = torch.index_select(model.ent_embeddings, 0, ent_idx_tensor).view(-1, model.embedding_dim, model.num_sections).detach().numpy()\n",
-    "    \n",
-    "    B = np.array([0,1,3],np.int)\n",
-    "    U = np.array([2],np.int)\n",
-    "    source_vertices = [0,1]\n",
-    "    target_vertices = [2]\n",
-    "    LSchur = harmonic_extension.Kron_reduction(edge_indices, restrictions, B, U)\n",
-    "    return LSchur, source_vertices, target_vertices, source_embeddings\n",
-    "\n",
-    "query_name_fn_dict = {'2p': L_p, '3p':L_p, '2i': L_i, '3i':L_i, 'ip':L_ip, 'pi': L_pi}"
+    "query_name_fn_dict = {'2p': L_p, '3p':L_p, '2i': L_i, '3i':L_i}"
    ]
   },
   {
@@ -324,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 3/200 [00:00<00:08, 23.00it/s]"
+      " 15%|█▌        | 30/200 [00:00<00:00, 290.58it/s]"
      ]
     },
     {
@@ -338,8 +236,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:15<00:00, 12.94it/s]\n",
-      "  1%|          | 2/200 [00:00<00:11, 17.67it/s]"
+      "100%|██████████| 200/200 [00:00<00:00, 281.43it/s]\n",
+      " 14%|█▍        | 28/200 [00:00<00:00, 277.48it/s]"
      ]
     },
     {
@@ -353,8 +251,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:16<00:00, 12.33it/s]\n",
-      "  2%|▏         | 3/200 [00:00<00:09, 20.81it/s]"
+      "100%|██████████| 200/200 [00:00<00:00, 292.39it/s]\n",
+      " 15%|█▌        | 30/200 [00:00<00:00, 293.66it/s]"
      ]
     },
     {
@@ -368,8 +266,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:09<00:00, 20.07it/s]\n",
-      "  2%|▏         | 3/200 [00:00<00:09, 21.39it/s]"
+      "100%|██████████| 200/200 [00:00<00:00, 288.47it/s]\n",
+      " 15%|█▌        | 30/200 [00:00<00:00, 296.95it/s]"
      ]
     },
     {
@@ -383,24 +281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:09<00:00, 20.16it/s]\n",
-      "0it [00:00, ?it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running query : (('e', ('r', 'r')), ('e', ('r',)))\n",
-      "Running query : ((('e', ('r',)), ('e', ('r',))), ('r',))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 200/200 [00:00<00:00, 291.06it/s]\n"
      ]
     }
    ],
@@ -411,7 +292,7 @@
     "allhits10 = []\n",
     "allmrr = []\n",
     "query_names = []\n",
-    "target_embeddings = model.ent_embeddings.view(-1, model.embedding_dim, model.num_sections)[:,:,use_section].detach().numpy().T\n",
+    "target_embeddings = model.entity_embeddings(indices=None)\n",
     "for query_structure in query_structures:\n",
     "    print('Running query : {}'.format(query_structure))\n",
     "    query_name = query_name_dict[query_structure]\n",
@@ -428,8 +309,8 @@
     "        if len(test_answers[query]) > 0:\n",
     "            # we have a non-trivial \"easy\" query\n",
     "            answers = [map_ent(a) for a in test_answers[query]]\n",
-    "            L, source_vertices, target_vertices, source_embeddings = fn(query, model)\n",
-    "            Q = harmonic_extension.compute_costs(L,source_vertices,target_vertices,source_embeddings[:,:,use_section].flatten(),target_embeddings,source_embeddings.shape[1])\n",
+    "            composite = fn(query, model)\n",
+    "            Q = torch.norm(composite - target_embeddings, dim=1, p=model.scoring_fct_norm).detach().numpy()\n",
     "            sortd = np.sort(Q)\n",
     "            idxleft = np.searchsorted(sortd, Q[answers], side='left') + 1\n",
     "            idxright = np.searchsorted(sortd, Q[answers], side='right') + 1\n",
@@ -474,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SheafE_Multisection_64embdim_64esdim_64sec_2norm_1000epochs_SoftplusLossloss_20210228-1911\n"
+      "TransE_1000epochs_128embdim_CrossEntropyLossloss_42seed_20210128-1828\n"
      ]
     },
     {
@@ -508,64 +389,46 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2p</th>\n",
-       "      <td>3.455427</td>\n",
-       "      <td>9.664855</td>\n",
-       "      <td>11.740321</td>\n",
-       "      <td>14.781636</td>\n",
-       "      <td>7.625073</td>\n",
+       "      <td>6.539156</td>\n",
+       "      <td>19.693430</td>\n",
+       "      <td>24.273544</td>\n",
+       "      <td>28.713767</td>\n",
+       "      <td>14.707361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3p</th>\n",
-       "      <td>3.865195</td>\n",
-       "      <td>13.174624</td>\n",
-       "      <td>15.154335</td>\n",
-       "      <td>17.386214</td>\n",
-       "      <td>9.228674</td>\n",
+       "      <td>6.943256</td>\n",
+       "      <td>16.726502</td>\n",
+       "      <td>19.107179</td>\n",
+       "      <td>22.446537</td>\n",
+       "      <td>13.119967</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2i</th>\n",
-       "      <td>0.010124</td>\n",
-       "      <td>0.761921</td>\n",
-       "      <td>1.287338</td>\n",
-       "      <td>2.578799</td>\n",
-       "      <td>1.239099</td>\n",
+       "      <td>3.109791</td>\n",
+       "      <td>9.247883</td>\n",
+       "      <td>13.803637</td>\n",
+       "      <td>19.684356</td>\n",
+       "      <td>8.404997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3i</th>\n",
-       "      <td>0.272727</td>\n",
-       "      <td>1.881370</td>\n",
-       "      <td>2.645478</td>\n",
-       "      <td>3.690932</td>\n",
-       "      <td>1.735074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pi</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ip</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>2.489583</td>\n",
+       "      <td>9.909295</td>\n",
+       "      <td>13.741026</td>\n",
+       "      <td>18.606407</td>\n",
+       "      <td>8.280399</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      hits@1     hits@3     hits@5    hits@10       mrr\n",
-       "2p  3.455427   9.664855  11.740321  14.781636  7.625073\n",
-       "3p  3.865195  13.174624  15.154335  17.386214  9.228674\n",
-       "2i  0.010124   0.761921   1.287338   2.578799  1.239099\n",
-       "3i  0.272727   1.881370   2.645478   3.690932  1.735074\n",
-       "pi  0.000000   0.000000   0.000000   0.000000  0.000000\n",
-       "ip  0.000000   0.000000   0.000000   0.000000  0.000000"
+       "      hits@1     hits@3     hits@5    hits@10        mrr\n",
+       "2p  6.539156  19.693430  24.273544  28.713767  14.707361\n",
+       "3p  6.943256  16.726502  19.107179  22.446537  13.119967\n",
+       "2i  3.109791   9.247883  13.803637  19.684356   8.404997\n",
+       "3i  2.489583   9.909295  13.741026  18.606407   8.280399"
       ]
      },
      "execution_count": 10,
