added norm regularization for entities and edge cochains

--- a/notebooks/BetaE_Reasoning_Test-Multisection.ipynb
+++ b/notebooks/BetaE_Reasoning_Test-Multisection.ipynb
@@ -174,7 +174,6 @@
     "        rels.append(mapped_id)\n",
     "        invs.append(orientation)\n",
     "    n_path_ents = len(rels)\n",
-    "    \n",
     "    edge_indices = np.concatenate([np.arange(0,n_path_ents)[:,np.newaxis].T, np.arange(1,n_path_ents+1)[:,np.newaxis].T], axis=0)\n",
     "    \n",
     "    rel_idx_tensor = torch.LongTensor(rels)\n",
@@ -182,10 +181,9 @@
     "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
     "        \n",
     "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
+    "\n",
     "    for invix in range(len(invs)):\n",
-    "        if invix == -1:\n",
+    "        if invs[invix] == -1:\n",
     "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
     "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
     "        else:\n",
@@ -222,10 +220,9 @@
     "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
     "    \n",
     "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
+    "\n",
     "    for invix in range(len(invs)):\n",
-    "        if invix == -1:\n",
+    "        if invs[invix] == 1:\n",
     "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
     "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
     "        else:\n",
@@ -256,10 +253,9 @@
     "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
     "    \n",
     "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
+    "\n",
     "    for invix in range(len(invs)):\n",
-    "        if invix == -1:\n",
+    "        if invs[invix] == -1:\n",
     "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
     "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
     "        else:\n",
@@ -292,10 +288,9 @@
     "    right_restrictions = torch.index_select(model.right_embeddings, 0, rel_idx_tensor).detach().numpy()\n",
     "    \n",
     "    restrictions = np.empty((len(rels), 2, left_restrictions.shape[1], left_restrictions.shape[2]))\n",
-    "#     restrictions[:,0,:,:] = left_restrictions\n",
-    "#     restrictions[:,1,:,:] = right_restrictions\n",
+    "\n",
     "    for invix in range(len(invs)):\n",
-    "        if invix == -1:\n",
+    "        if invs[invix] == -1:\n",
     "            restrictions[invix,0,:,:] = right_restrictions[invix]\n",
     "            restrictions[invix,1,:,:] = left_restrictions[invix]\n",
     "        else:\n",
@@ -324,7 +319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 3/200 [00:00<00:08, 23.00it/s]"
+      "  1%|          | 2/200 [00:00<00:10, 19.54it/s]"
      ]
     },
     {
@@ -338,8 +333,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:15<00:00, 12.94it/s]\n",
-      "  1%|          | 2/200 [00:00<00:11, 17.67it/s]"
+      "100%|██████████| 200/200 [00:16<00:00, 12.05it/s]\n",
+      "  0%|          | 1/200 [00:00<00:27,  7.30it/s]"
      ]
     },
     {
@@ -353,8 +348,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:16<00:00, 12.33it/s]\n",
-      "  2%|▏         | 3/200 [00:00<00:09, 20.81it/s]"
+      "100%|██████████| 200/200 [00:16<00:00, 11.78it/s]\n",
+      "  1%|          | 2/200 [00:00<00:10, 19.39it/s]"
      ]
     },
     {
@@ -368,8 +363,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:09<00:00, 20.07it/s]\n",
-      "  2%|▏         | 3/200 [00:00<00:09, 21.39it/s]"
+      "100%|██████████| 200/200 [00:10<00:00, 19.35it/s]\n",
+      "  2%|▏         | 3/200 [00:00<00:09, 21.30it/s]"
      ]
     },
     {
@@ -383,7 +378,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:09<00:00, 20.16it/s]\n",
+      "100%|██████████| 200/200 [00:09<00:00, 20.02it/s]\n",
       "0it [00:00, ?it/s]\n",
       "0it [00:00, ?it/s]"
      ]
@@ -508,35 +503,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2p</th>\n",
-       "      <td>3.455427</td>\n",
-       "      <td>9.664855</td>\n",
-       "      <td>11.740321</td>\n",
-       "      <td>14.781636</td>\n",
-       "      <td>7.625073</td>\n",
+       "      <td>3.779296</td>\n",
+       "      <td>11.259271</td>\n",
+       "      <td>13.741979</td>\n",
+       "      <td>17.407549</td>\n",
+       "      <td>9.108894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3p</th>\n",
-       "      <td>3.865195</td>\n",
-       "      <td>13.174624</td>\n",
-       "      <td>15.154335</td>\n",
-       "      <td>17.386214</td>\n",
-       "      <td>9.228674</td>\n",
+       "      <td>4.250471</td>\n",
+       "      <td>13.604889</td>\n",
+       "      <td>15.815418</td>\n",
+       "      <td>19.328816</td>\n",
+       "      <td>10.118222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2i</th>\n",
-       "      <td>0.010124</td>\n",
-       "      <td>0.761921</td>\n",
-       "      <td>1.287338</td>\n",
-       "      <td>2.578799</td>\n",
-       "      <td>1.239099</td>\n",
+       "      <td>0.226602</td>\n",
+       "      <td>1.775557</td>\n",
+       "      <td>2.984284</td>\n",
+       "      <td>6.874507</td>\n",
+       "      <td>2.708596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3i</th>\n",
-       "      <td>0.272727</td>\n",
-       "      <td>1.881370</td>\n",
-       "      <td>2.645478</td>\n",
-       "      <td>3.690932</td>\n",
-       "      <td>1.735074</td>\n",
+       "      <td>1.212356</td>\n",
+       "      <td>3.276867</td>\n",
+       "      <td>5.048014</td>\n",
+       "      <td>7.535188</td>\n",
+       "      <td>4.106389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pi</th>\n",
@@ -559,13 +554,13 @@
        "</div>"
       ],
       "text/plain": [
-       "      hits@1     hits@3     hits@5    hits@10       mrr\n",
-       "2p  3.455427   9.664855  11.740321  14.781636  7.625073\n",
-       "3p  3.865195  13.174624  15.154335  17.386214  9.228674\n",
-       "2i  0.010124   0.761921   1.287338   2.578799  1.239099\n",
-       "3i  0.272727   1.881370   2.645478   3.690932  1.735074\n",
-       "pi  0.000000   0.000000   0.000000   0.000000  0.000000\n",
-       "ip  0.000000   0.000000   0.000000   0.000000  0.000000"
+       "      hits@1     hits@3     hits@5    hits@10        mrr\n",
+       "2p  3.779296  11.259271  13.741979  17.407549   9.108894\n",
+       "3p  4.250471  13.604889  15.815418  19.328816  10.118222\n",
+       "2i  0.226602   1.775557   2.984284   6.874507   2.708596\n",
+       "3i  1.212356   3.276867   5.048014   7.535188   4.106389\n",
+       "pi  0.000000   0.000000   0.000000   0.000000   0.000000\n",
+       "ip  0.000000   0.000000   0.000000   0.000000   0.000000"
       ]
      },
      "execution_count": 10,
