before multisection complex query update

--- a/notebooks/Resave_BetaE_Data.ipynb
+++ b/notebooks/Resave_BetaE_Data.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "ds = pykeen.datasets.get_dataset(dataset=dataset, dataset_kwargs=dict(create_inverse_triples=False))\n",
+    "ds = pykeen.datasets.get_dataset(dataset=dataset, dataset_kwargs=dict(create_inverse_triples=True))\n",
     "training = ds.training.mapped_triples\n",
     "relid2label = ds.training.relation_id_to_label \n",
     "label2relid = {v:k for k,v in relid2label.items()}\n",
@@ -79,14 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "474"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.num_relations"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,28 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_ent(e):\n",
-    "    return label2entid[id2ent[e]]\n",
+    "    return e\n",
     "\n",
     "def map_rel(r):\n",
-    "    relname = id2rel[r]\n",
-    "    return label2relid[relname[1:]]\n",
+    "    return r\n",
     "\n",
     "def orient_rel(r):\n",
-    "    orientation = 1\n",
-    "    relname = id2rel[r]\n",
-    "    if relname[0] == '-':\n",
-    "        orientation = -1\n",
-    "    return orientation"
+    "    return 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,16 +231,16 @@
     "    train_rels = np.array(train_rels)\n",
     "    train_invs = np.array(train_invs)\n",
     "    print(train_ents.shape, train_rels.shape, train_invs.shape)\n",
-    "    np.save(os.path.join(betae_path, '{}_remapped_train_entities'.format(query_name)), train_ents)\n",
-    "    np.save(os.path.join(betae_path, '{}_remapped_train_relations'.format(query_name)), train_rels)\n",
-    "    np.save(os.path.join(betae_path, '{}_remapped_train_inverses'.format(query_name)), train_invs)\n",
-    "    with open(os.path.join(betae_path, '{}_remapped_train_answers.pkl'.format(query_name)), 'wb') as f:\n",
+    "    np.save(os.path.join(betae_path, '{}_resaved_train_entities'.format(query_name)), train_ents)\n",
+    "    np.save(os.path.join(betae_path, '{}_resaved_train_relations'.format(query_name)), train_rels)\n",
+    "    np.save(os.path.join(betae_path, '{}_resaved_train_inverses'.format(query_name)), train_invs)\n",
+    "    with open(os.path.join(betae_path, '{}_resaved_train_answers.pkl'.format(query_name)), 'wb') as f:\n",
     "        pickle.dump(all_answers, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,44 +276,24 @@
     "    test_rels = np.array(test_rels)\n",
     "    test_invs = np.array(test_invs)\n",
     "    print(test_ents.shape, test_rels.shape, test_invs.shape)\n",
-    "    np.save(os.path.join(betae_path, '{}_remapped_test-easy_entities'.format(query_name)), test_ents)\n",
-    "    np.save(os.path.join(betae_path, '{}_remapped_test-easy_relations'.format(query_name)), test_rels)\n",
-    "    np.save(os.path.join(betae_path, '{}_remapped_test-easy_inverses'.format(query_name)), test_invs)\n",
-    "    with open(os.path.join(betae_path, '{}_remapped_test-easy_answers.pkl'.format(query_name)), 'wb') as f:\n",
+    "    np.save(os.path.join(betae_path, '{}_resaved_test-easy_entities'.format(query_name)), test_ents)\n",
+    "    np.save(os.path.join(betae_path, '{}_resaved_test-easy_relations'.format(query_name)), test_rels)\n",
+    "    np.save(os.path.join(betae_path, '{}_resaved_test-easy_inverses'.format(query_name)), test_invs)\n",
+    "    with open(os.path.join(betae_path, '{}_resaved_test-easy_answers.pkl'.format(query_name)), 'wb') as f:\n",
     "        pickle.dump(all_answers, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# did it work?\n",
-    "ents = np.load(os.path.join(betae_path, '{}_remapped_test-easy_entities.npy'.format('2p')))\n",
-    "rels = np.load(os.path.join(betae_path, '{}_remapped_test-easy_relations.npy'.format('2p')))\n",
-    "with open(os.path.join(betae_path, '{}_remapped_test-easy_answers.pkl'.format('2p')), 'rb') as f:\n",
-    "    ans = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "237"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ds.num_relations"
+    "# did it work?\n",
+    "ents = np.load(os.path.join(betae_path, '{}_resaved_test-easy_entities.npy'.format('2p')))\n",
+    "rels = np.load(os.path.join(betae_path, '{}_resaved_test-easy_relations.npy'.format('2p')))\n",
+    "with open(os.path.join(betae_path, '{}_resaved_test-easy_answers.pkl'.format('2p')), 'rb') as f:\n",
+    "    ans = pickle.load(f)"
    ]
   },
   {
@@ -316,7 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "(4883,)"
+       "474"
       ]
      },
      "execution_count": 12,
@@ -325,7 +313,7 @@
     }
    ],
    "source": [
-    "ents.shape"
+    "ds.num_relations"
    ]
   },
   {
@@ -336,13 +324,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[132,  39],\n",
-       "       [ 32, 190],\n",
-       "       [  9,   3],\n",
-       "       ...,\n",
-       "       [ 23, 173],\n",
-       "       [204, 201],\n",
-       "       [183,  10]])"
+       "(4883,)"
       ]
      },
      "execution_count": 13,
@@ -351,7 +333,7 @@
     }
    ],
    "source": [
-    "rels"
+    "ents.shape"
    ]
   },
   {
@@ -362,10 +344,36 @@
     {
      "data": {
       "text/plain": [
-       "array([ 7708,  6397, 12720, ..., 13980,  6596, 14351])"
+       "array([[438, 121],\n",
+       "       [155, 132],\n",
+       "       [ 38,  14],\n",
+       "       ...,\n",
+       "       [254, 287],\n",
+       "       [250,  80],\n",
+       "       [142,  17]])"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4353, 3793,  361, ..., 3120,  329, 2279])"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
