before complex cvx rewrite

--- a/notebooks/BetaE_Reasoning_Test-Multisection.ipynb
+++ b/notebooks/BetaE_Reasoning_Test-Multisection.ipynb
@@ -46,7 +46,7 @@
     "dataset = 'FB15k-237'\n",
     "num_test = 200\n",
     "use_section = 0\n",
-    "train_test_queries = 'train'\n",
+    "train_test_queries = 'test'\n",
     "model_name = 'SheafE_Multisection_64embdim_64esdim_64sec_2norm_1000epochs_SoftplusLossloss_20210301-2201'\n",
     "save_loc = '/home/gebhart/projects/sheaf_kg/data/{}/{}/trained_model.pkl'.format(dataset,model_name)\n",
     "betae_path = '/home/gebhart/projects/sheaf_kg/data/{}-betae'.format(dataset)\n",
